[tool.poetry]
name = "wiki-family-utils"
version = "0.2.0"
description = ""
authors = ["Ryou0634 <ryou0634@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsonargparse = "^4.27.0"
tqdm = "^4.66.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
